# Pakistan-T20I-Tri-Series--2025

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
assets/: top_performers_summary.txt
css/: style.css
docs/css/: style.css
js/: main.js
script/: eda.py
