[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dti"
version = "0.1.0"
description = "Directional textual inversion"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {file = "LICENSE"}
authors = [
  {name = "Kunhee Kim", email = "kunhee.kim@kaist.ac.kr"},
  {name = "NaHyeon Park", email = "julia19@kaist.ac.kr"},
]
dependencies = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "accelerate==1.10.1",
  "diffusers==0.35.1",
  "transformers[sentencepiece]==4.56.0",
  "peft==0.17.1",
  "scipy",
]

[project.urls]
Homepage = "https://kunheek.github.io/dti"
Repository = "https://github.com/kunheek/dti.git"

[tool.setuptools.packages.find]
where = ["src"]
